--- a/css/inicioSesion.css
+++ b/css/inicioSesion.css
@@ -1,29 +1,35 @@
 #customBtn {
-    display: inline-block;
-    background: white;
-    color: #444;
-    border-radius: 5px;
-    border: thin solid #888;
-    box-shadow: 1px 1px 1px grey;
-    white-space: nowrap;
-  }
+  background: white;
+  color: #444;
+  border-radius: 5px;
+  border: thin solid #888;
+  box-shadow: 1px 1px 1px grey;
+  width: 100%;
+}
 
-  #customBtn:hover {
-    cursor: pointer;
-  }
+#customBtn:hover {
+  cursor: pointer;
+}
 
-  span.buttonText {
-    display: inline-block;
-    vertical-align: middle;
-    padding-left: 42px;
-    padding-right: 42px;
-    font-size: 14px;
-    /* Use the Roboto font that is loaded in the <head> */
-    font-family: 'Roboto', sans-serif;
-  }
+span.buttonText {
+  display: inline-block;
+  vertical-align: middle;
+  padding-left: 42px;
+  padding-right: 42px;
+  font-size: 14px;
+  /* Use the Roboto font that is loaded in the <head> */
+  font-family: 'Roboto', sans-serif;
+}
 
-  #titulo {
-      text-align: center;
-  }
+#titulo, #centrar{
+  text-align: center;
+}
 
-  
+#email, #password, #submit {
+  width: 100%;
+}
+
+#submit {
+  color: white;
+  background-color: orange;
+}
