--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
-* {
-	margin:0;
-	padding:0;
+.container-fluid {
+	margin:0 !important;
+	padding:0 !important;
 }
 
 .nav a{
@@ -15,7 +15,7 @@
     text-align: center;
     vertical-align: middle;
     color: #000000;
-    padding-top:5px;
+	padding-top:5px;
 }
 
 .activo{
@@ -23,12 +23,19 @@
 }
 
 #IESSANISIDRO a{
-    color: #000000;
+	color: #000000;
+	text-decoration:none;
 }
 
 #persona{
 	display: inline-block;
-    text-align: right;
+	text-align: right;
+}
+
+#persona2{
+	display: inline-block;
+	text-align: left;
+	background-color: #c3c3c3;
 }
 
 
